# FastAPI-Movie-Catalog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-check.yml
films-catalog/: main.py
films-catalog/schemas/: movie_catalog.py
movie-catalog/: .coveragerc  app_lifespan.py  config.py  main.py  stuff.py
movie-catalog/api/: main_view.py
movie-catalog/api/api_v1/: __init__.py
movie-catalog/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
movie-catalog/api/api_v1/movie_catalog/: crud.py  dependencies.py  redis.py  views.py
movie-catalog/api/api_v1/movie_catalog/views/: __init__.py  details_view.py  list_view.py
movie-catalog/commands/: cli.py  hello.py  tokens.py
movie-catalog/schemas/: movie_catalog.py
movie-catalog/tests/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
movie-catalog/tests/test_api/test_api_v1/test_movie_catalog/: test_crud.py
movie-catalog/tests/test_schemas/: test_movie_catalog.py
movie_catalog/: .env.template  app_lifespan.py  config.default.yaml  config.py  exceptions.py  main.py  manage.bat  stuff.py
movie_catalog/api/: __init__.py  main_view.py
movie_catalog/api/api_v1/: __init__.py
movie_catalog/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py
movie_catalog/api/api_v1/movie_catalog/: crud.py  dependencies.py
movie_catalog/api/api_v1/movie_catalog/views/: __init__.py  details_view.py  list_view.py
movie_catalog/commands/: hello.py  tokens.py
movie_catalog/dependencies/: auth.py  movie_catalog.py
movie_catalog/rest/: __init__.py  main_view.py
movie_catalog/rest/movie_catalog/: __init__.py  create_view.py  delete_view.py  list_view.py  update_view.py
movie_catalog/schemas/: movie_catalog.py
movie_catalog/services/auth/: __init__.py  redis_tokens_helper.py
movie_catalog/services/movie_catalog/: form_response_helper.py
movie_catalog/storage/movie_catalog/: __init__.py  crud.py
movie_catalog/templates/: about.html  base.html  home.html
movie_catalog/templates/components/: navbar.html
movie_catalog/templates/macros/: form-fields.html
movie_catalog/templates/movie-catalog/: create.html  list.html  update.html
movie_catalog/templates/movie-catalog/components/: delete_modal_window.html
movie_catalog/templates/movie-catalog/macros/: form.html
movie_catalog/templating/: __init__.py  jinja_templates.py
movie_catalog/tests/: conftest.py
movie_catalog/tests/test_api/: conftest.py  test_views.py
movie_catalog/tests/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
movie_catalog/tests/test_api/test_api_v1/test_movie_catalog/: test_crud.py  test_dependencies.py
movie_catalog/tests/test_api/test_api_v1/test_movie_catalog/test_views/: test_details_veiew.py  test_list_view.py
movie_catalog/tests/test_schemas/: test_movie_catalog.py
